# deadbeef

./: .gitignore  Cargo.toml  stalemate.rs
data/: ccr_one_hour_test.epd
src/: args.rs  display.rs  emojify.rs  engine.rs  eval.rs  expand.rs  game.rs  hash.rs  input.rs  lib.rs  logger.rs  main.rs  mcts.rs  node.rs  pgn.rs  play.rs  playout.rs  q_search.rs  random_move.rs  repetition_detector.rs  search.rs  search_iterations.rs  search_ponder.rs  search_strategy.rs  search_threaded.rs  search_threaded_batch.rs  search_time.rs  settings.rs  setup.rs  show_thinking.rs  state.rs  stats.rs  table.rs  time_remaining.rs  tree_merge.rs  tree_node.rs  uct.rs  utils.rs  xboard.rs
src/mcts/: mod.rs
src/pgn/: mod.rs
tests/: bratko_kopec_test.rs  ccr_one_hour_test.rs  do_not_blunder.rs  draw_50_moves.rs  draw_threefold.rs  easy_captures.rs  endgame.rs  iterations.rs  mate_in_1.rs  mate_in_13_plys.rs  mate_in_1_ply.rs  mate_in_2.rs  mate_in_3.rs  mate_in_3_plys.rs  mate_in_4.rs  mate_in_5.rs  mate_in_5_plys.rs  mate_in_6.rs  mate_in_7.rs  mate_in_7_plys.rs  mate_in_9_plys.rs  playout.rs  prolongs_getting_mated.rs  queen_trap.rs  stalemate.rs  starting_pos.rs  trap.rs
tests/helpers/: mod.rs
tests/tests/: mutable_parallel_tree_search.rs
