[package]
name = "deadbeef" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Brad Urani <bradurani@gmail.com>"]

[dependencies]
rand = "0.5.5"
matches = "0.1.8"
itertools = "0.7.8"
twox-hash="1.1.1"
separator = "0.3.1"
[dependencies.shakmaty]
path = "../shakmaty"

[dev-dependencies]
pretty_assertions = "0.5.1"

[lib]
name = "deadbeef"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
