[package]
name = "deadbeef" 
version = "0.1.0"
authors = ["Brad Urani <bradurani@gmail.com>"]

[dependencies]
rand = "0.5.5"
matches = "0.1.8"
itertools = "0.7.8"
twox-hash="1.1.1"
separator = "0.3.1"
pad = "0.1"
log = "0.4"
env_logger = "0.5.13"
[dependencies.shakmaty]
path = "../shakmaty"

[dev-dependencies]
pretty_assertions = "0.5.1"

[lib]
name = "deadbeef"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
